testdata/zkc/invalid/if_invalid_03.zkc
;;error:4:16-17:unexpected token
function f(x:u8) -> (r:u8) {
  r = 0
  if x == (x + ) {
    r = 1
    return
  }
  return
}
